--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@heroui/system": "^2.4.7",
     "@heroui/theme": "^2.4.6",
     "@prisma/client": "6.3.1",
-    "bcrypt": "^5.1.1",
+    "axios": "^1.7.9",
+    "bcryptjs": "^3.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.2",
     "next": "15.1.7",
@@ -25,11 +26,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
